--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap" rel="stylesheet">
-  <title>Apna Fashion Store</title>
+  <title>E-Shop</title>
 </head>
 
 <body>
