--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <link rel="icon" type="image/png"  href="/assets/logo.png">
-  <!-- <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon_io/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon_io/favicon-16x16.png"> -->
-  <link rel="manifest" href="/assets/favicon_io/site.webmanifest">
+  <link rel="icon" type="image/png"  href="/assets/manifest.jpeg">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
